DEAM-151: Fix tip alignment.

--- a/src/app/modules/msp-core/components/support-documents/support-documents.component.scss
+++ b/src/app/modules/msp-core/components/support-documents/support-documents.component.scss
@@ -4,3 +4,11 @@
   padding-top: 2rem !important;
   padding-left: 0rem;
 }
+
+:host {
+  common-page-section {
+    aside {
+      margin-top: 0 !important;
+    }
+  }
+}
